--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "nextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "framer-motion": "^1.11.1",
-    "next": "^9.3.3",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "ress": "^2.0.4",
-    "tone": "^13.8.25"
-  }
+    "name": "nextjs",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "export": "next export"
+    },
+    "dependencies": {
+        "framer-motion": "^1.11.1",
+        "next": "^9.3.3",
+        "react": "^16.13.0",
+        "react-dom": "^16.13.0",
+        "ress": "^2.0.4",
+        "tone": "^13.8.25"
+    }
 }
