--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "react-dom": "^16.13.0",
         "ress": "^2.0.4",
         "tone": "^13.8.25"
+    },
+    "devDependencies": {
+        "next-build-id": "^3.0.0"
     }
 }
