--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-    "name": "nextjs",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "export": "next export"
-    },
-    "dependencies": {
-        "framer-motion": "^1.11.1",
-        "next": "^9.3.3",
-        "react": "^16.13.0",
-        "react-dom": "^16.13.0",
-        "ress": "^2.0.4",
-        "tone": "^13.8.25"
-    },
-    "devDependencies": {}
+  "name": "ora-adding-pause-and-clear",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export"
+  },
+  "dependencies": {
+    "framer-motion": "2.0.0",
+    "next": "^9.3.3",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "ress": "^2.0.4",
+    "tone": "^13.8.25"
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
 }
